src/humangov-florida.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-python-app-florida
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-python-app-florida
  template:
    metadata:
      labels:
        app: humangov-python-app-florida
    spec:
      serviceAccountName: humangov-pod-execution-role
      containers:
        - name: humangov-python-app-florida
          image: public.ecr.aws/v1y4k1q2/humangov-app:latest
---
apiVersion: v1
kind: Service
metadata:
  name: humangov-python-app-service-florida
spec:
  type: ClusterIP
  selector:
    app: humangov-python-app-florida
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-nginx-reverse-proxy-florida
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-nginx-reverse-proxy-florida
  template:
    metadata:
      labels:
        app: humangov-nginx-reverse-proxy-florida
    spec:
      containers:
        - name: humangov-nginx-reverse-proxy-florida
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: humangov-nginx-config-florida-vol
              mountPath: /etc/nginx/
      volumes:
        - name: humangov-nginx-config-florida-vol
          configMap:
            name: humangov-nginx-config-florida

---
apiVersion: v1
kind: Service
metadata:
  name: humangov-nginx-service-florida
spec:
  selector:
    app: humangov-nginx-reverse-proxy-florida
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
