src/humangov-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-python-app-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-python-app-staging
  template:
    metadata:
      labels:
        app: humangov-python-app-staging
    spec:
      serviceAccountName: humangov-pod-execution-role
      containers:
        - name: humangov-python-app-staging
          image: CONTAINER_IMAGE
---
apiVersion: v1
kind: Service
metadata:
  name: humangov-python-app-service-staging
spec:
  type: ClusterIP
  selector:
    app: humangov-python-app-staging
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-nginx-reverse-proxy-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-nginx-reverse-proxy-staging
  template:
    metadata:
      labels:
        app: humangov-nginx-reverse-proxy-staging
    spec:
      containers:
        - name: humangov-nginx-reverse-proxy-staging
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: humangov-nginx-config-staging-vol
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: humangov-nginx-config-staging-vol
          configMap:
            name: humangov-nginx-config-staging

---
apiVersion: v1
kind: Service
metadata:
  name: humangov-nginx-service-staging
spec:
  selector:
    app: humangov-nginx-reverse-proxy-staging
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
